Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-9178

Wrong result for CAST(CONVERT('1IJ3' USING ucs2) AS SIGNED)

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 5.5(EOL), 10.0(EOL), 10.1(EOL), 10.2(EOL)
    • 10.1.10
    • Character Sets
    • None

    Description

      mysql> SELECT CAST(CONVERT('1IJ3' USING ucs2) AS SIGNED);
      +--------------------------------------------+
      | CAST(CONVERT('1IJ3' USING ucs2) AS SIGNED)  |
      +--------------------------------------------+
      |                                        123 |
      +--------------------------------------------+
      1 row in set (0.00 sec)

      The above result is wrong. The expected result is 1 with a warning.

      The character:

      U+0132 LATIN CAPITAL LIGATURE IJ

      is misinterpreted as

      U+0032 DIGIT TWO

      Attachments

        Activity

          People

            bar Alexander Barkov
            bar Alexander Barkov
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: