MDEV-9178 Wrong result for CAST(CONVERT('1Ĳ3' USING ucs2) AS SIGNED) Also, fixing compilation warnings in ctype-mb.ic (Windows).